# swaynag-rs

./: Cargo.toml  LICENSE.md  README.md
src/: child.rs  lib.rs  spawn_async.rs  spawn_blocking.rs  swaynag.rs  tests.rs
