[package]
name = "swaynag"
version = "0.1.0"
authors = ["Jayce Fayne <jayce.fayne@mailbox.org>"]
edition = "2018"
description = "A simple wrapper around swaynag"
license = "MIT"
repository = "https://github.com/jaycefayne/swaynag-rs"

[features]
async = ["async-io", "async-pidfd", "futures-lite"]

[dependencies]
async-io = { version = "1.1", optional = true }
futures-lite = { version = "1.11", optional = true }
async-pidfd =  { version = "0.1.4", optional = true }
